# fastapi_serviceutils

./: .gitignore  .pre-commit-config.yaml  .tmuxp.yml  LICENSE  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: conf.py  create_service.rst  create_service_help.txt  dependency_management.rst  deployment.rst  deployment_basics.rst  development.rst  doc_requirements.txt  documentation.rst  exampleservice.rst  external_resources.rst  external_resources_databases.rst  external_resources_services.rst  getting_started.rst  helpers.rst  index.rst  makefile.rst  makefile_help.txt  see_also.rst  service_structure.rst  sources.rst  testing.rst  tmuxp.rst  usage.rst
docs/_static/: example_config.yml  example_docker_compose.yml  example_dockerfile
docs/_static/exampleservice/: pyproject.toml
docs/_static/exampleservice/app/: config.yml  main.py
docs/_static/exampleservice/app/endpoints/: __init__.py
docs/_static/exampleservice/app/endpoints/v1/: __init__.py  example.py  models.py
docs/_static/exampleservice/tests/: service_test.py
docs/api/: fastapi_serviceutils.app.endpoints.default.rst  fastapi_serviceutils.app.endpoints.rst  fastapi_serviceutils.app.handlers.rst  fastapi_serviceutils.app.middlewares.rst  fastapi_serviceutils.app.rst  fastapi_serviceutils.base.rst  fastapi_serviceutils.cli.rst  fastapi_serviceutils.default_endpoints.rst  fastapi_serviceutils.docs.rst  fastapi_serviceutils.external_resources.rst  fastapi_serviceutils.middlewares.rst  fastapi_serviceutils.rst  fastapi_serviceutils.utils.docs.rst  fastapi_serviceutils.utils.external_resources.rst  fastapi_serviceutils.utils.rst  fastapi_serviceutils.utils.tests.rst  modules.rst
fastapi_serviceutils/: __init__.py  service.py
fastapi_serviceutils/app/: __init__.py  logger.py  service_config.py
fastapi_serviceutils/app/endpoints/: __init__.py
fastapi_serviceutils/app/endpoints/default/: __init__.py  alive.py  config.py  models.py
fastapi_serviceutils/app/handlers/: __init__.py
fastapi_serviceutils/base/: __init__.py  errors.py  logger.py  service_config.py
fastapi_serviceutils/cli/: __init__.py  create_service.py
fastapi_serviceutils/cli/template/: cookiecutter.json
fastapi_serviceutils/cli/template/{{cookiecutter.service_name}}/: .gitignore  .tmuxp.yml  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
fastapi_serviceutils/cli/template/{{cookiecutter.service_name}}/app/: __init__.py  config.yml  main.py
fastapi_serviceutils/cli/template/{{cookiecutter.service_name}}/app/endpoints/: __init__.py
fastapi_serviceutils/cli/template/{{cookiecutter.service_name}}/app/endpoints/v1/: errors.py  models.py  {{cookiecutter.endpoint}}.py
fastapi_serviceutils/cli/template/{{cookiecutter.service_name}}/docs/: conf.py  deployment.rst  development.rst  index.rst  see_also.rst  sources.rst
fastapi_serviceutils/default_endpoints/: __init__.py  alive.py  config.py  models.py
fastapi_serviceutils/docs/: __init__.py
fastapi_serviceutils/external_resources/: __init__.py  external_services.py
fastapi_serviceutils/middlewares/: __init__.py  prometheus.py
fastapi_serviceutils/utils/: __init__.py
fastapi_serviceutils/utils/docs/: __init__.py  apidoc.py
fastapi_serviceutils/utils/external_resources/: __init__.py  dbs.py  services.py
fastapi_serviceutils/utils/tests/: __init__.py  endpoints.py
tests/: base_service_config.py  base_service_config_test.py  config.yml  create_service_test.py  default_endpoints_test.py  endpoints_test.py  external_resources_db_test.py  external_resources_external_service_test.py
tests/configs/: config.yml  config2.yml  config3.yml
tests/invalid_configs/: invalid_config.yml  invalid_config10.yml  invalid_config11.yml  invalid_config12.yml  invalid_config13.yml  invalid_config14.yml  invalid_config15.yml  invalid_config16.yml  invalid_config17.yml  invalid_config18.yml  invalid_config19.yml  invalid_config2.yml  invalid_config20.yml  invalid_config3.yml  invalid_config4.yml  invalid_config5.yml  invalid_config6.yml  invalid_config7.yml  invalid_config8.yml  invalid_config9.yml
