[tool.poetry]
name = "fastapi_serviceutils"
version = "2.0.1"
license = "MIT"
description = "Utils for fastapi based services."
authors = [
  "Simon Kallfass <skallfass@ouroboros.info>",
]
readme = "README.md"
include = ["README.md"]
repository = "https://github.com/skallfass/fastapi_serviceutils"
homepage = "https://fastapi-serviceutils.readthedocs.io/en/latest/"
keywords = ["python", "fastapi", "webservice", "service-utils"]
classifiers = [
    "Operating System :: Unix",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]
cookiecutter = ">=1.6"
databases = { version = ">=0.2", extras = ["postgresql"] }
fastapi = { version = ">=0.42", extras = ["all"] }
loguru = ">=0.3"
psycopg2 = ">=2.8"
python = ">=3.7,<4"
requests = ">=2.22.0"
sqlalchemy = ">=1.3"
toolz = ">=0.10"

[tool.poetry.dev-dependencies]
autoflake = ">=1.3"
coverage-badge = ">=1"
flake8 = ">=3.7"
ipython = ">=7.8"
jedi = ">=0.14"
neovim = ">=0.3.1"
pudb = ">=2019.1"
pygments = ">=2.4"
pylint = ">=2.4.3"
pytest = ">=5"
pytest-asyncio = ">=0.10"
pytest-cov = ">=2"
pytest-xdist = ">=1.30"
sphinx = ">=2"
sphinx-autodoc-typehints = ">=1.6"
sphinx-rtd-theme = ">=0.4.3"
yapf = ">=0.27"

[tool.poetry.extras]

[tool.dephell.devs]
from = {format = "poetry", path = "pyproject.toml"}
envs = ["main", "devs"]

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
envs = ["main"]
versioning = "semver"

[tool.dephell.lock]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "poetrylock", path = "poetry.lock"}

[tool.poetry.scripts]
create_service = "fastapi_serviceutils.cli.create_service:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
